--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gsap": "^2.0.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "scrollmagic": "^2.0.5",
     "semantic-ui-react": "^0.82.2"
